--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ model/install/*
 model/.catkin_workspace
 .bash_history
 model/src/centralized_dashboard/src/__pycache__/*
+.cache/*
+unitTest/__pycache__/*
+unitTest/.coverage
