--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   },
   "description": "Sample app for CSD for AngularJS",
   "version": "1.0.2",
-  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jasmine"
   },
   "devDependencies": {
     "angular-mocks": "^1.8.2",
     "jest-cli": "^26.6.3"
   },
   "dependencies": {
-    "angular": "^1.8.2"
+    "angular": "^1.8.2",
+    "angularjs": "^0.0.1",
+    "esm": "^3.2.25",
+    "jasmine": "^3.6.3"
   }
 }
