--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.8.2",
-    "jest-cli": "^26.6.3"
+    "jasmine-core": "^3.6.0",
+    "jest-cli": "^26.6.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^4.0.1"
   },
   "dependencies": {
     "angular": "^1.8.2",
