--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "description": "Sample app for CSD for AngularJS",
   "version": "1.0.2",
   "scripts": {
-    "test": "jasmine"
+    "test": "karma start karma.conf.js"
   },
   "devDependencies": {
     "angular-mocks": "^1.8.2",
     "jasmine-core": "^3.6.0",
     "jest-cli": "^26.6.3",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1"
   },
