--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.8.2",
+    "jasmine": "^3.6.3",
     "jasmine-core": "^3.6.0",
     "jest-cli": "^26.6.3",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1"
   },
   "dependencies": {
     "angular": "^1.8.2",
     "angularjs": "^0.0.1",
-    "esm": "^3.2.25",
-    "jasmine": "^3.6.3"
+    "esm": "^3.2.25"
   }
 }
