--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Sample app for CSD for AngularJS",
   "version": "1.0.2",
   "scripts": {
-    "test": "jasmine"
+    "test": "karma start my.conf.js"
   },
   "devDependencies": {
     "angular-mocks": "^1.8.2",
