--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "angular": "^1.8.2",
     "angularjs": "^0.0.1",
-    "esm": "^3.2.25"
+    "async": "^3.2.0",
+    "esm": "^3.2.25",
+    "karma-coverage": "^2.0.3"
   }
 }
