--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "jest-cli": "^26.6.3",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
     "karma-jasmine": "^4.0.1"
   },
   "dependencies": {
     "angular": "^1.8.2",
     "angularjs": "^0.0.1",
     "async": "^3.2.0",
-    "esm": "^3.2.25",
-    "karma-coverage": "^2.0.3"
+    "esm": "^3.2.25"
   }
 }
